reescaling problem solved

--- a/style.css
+++ b/style.css
@@ -47,7 +47,10 @@ video{
     position: fixed;
     top: 0%;
     left: 0%;
-    width: 100%;
+    width: 177.77777778vh; 
+    height: 100%;
+    min-width: 100%;
+    min-height: 56.25vw;
     z-index: -10;
 }
 
